# Parsing_webpage

./: README.md  main.py  pyproject.toml
src/: HeadHunter.py  absract_class.py  classes_for_hh_and_spjob.py  head_hunter.py  superjob.py  utils.py
